Updating menu layout.

--- a/VideoGameLauncher/VideoGameLauncher.csproj
+++ b/VideoGameLauncher/VideoGameLauncher.csproj
@@ -90,6 +90,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MarginSetter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
