--- a/VideoGameLauncher/packages.config
+++ b/VideoGameLauncher/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net452" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net452" />
+  <package id="Svg2Xaml" version="0.3.0.5" targetFramework="net452" />
   <package id="WPF.Metro" version="1.0.1.1" targetFramework="net452" />
 </packages>
