--- a/VideoGameLauncher/packages.config
+++ b/VideoGameLauncher/packages.config
@@ -1,8 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" />
   <package id="Extended.Wpf.Toolkit" version="3.3.0" targetFramework="net452" />
-  <package id="MahApps.Metro" version="1.5.0" targetFramework="net452" />
+  <package id="MahApps.Metro" version="1.6.1" targetFramework="net452" />
+  <package id="MahApps.Metro.IconPacks.Material" version="2.2.0" targetFramework="net452" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net452" />
   <package id="Svg2Xaml" version="0.3.0.5" targetFramework="net452" />
-  <package id="WPF.Metro" version="1.0.1.1" targetFramework="net452" />
+  <package id="Xceed.Products.Wpf.Toolkit.Base.Themes" version="3.6.17613.09190" targetFramework="net452" />
+  <package id="Xceed.Wpf.Themes" version="3.6.17613.09190" targetFramework="net452" />
+  <package id="Xceed.Wpf.Themes.Metro" version="3.6.17613.09190" targetFramework="net452" />
+  <package id="Xceed.Wpf.Themes.Office2007" version="3.6.17613.09190" targetFramework="net452" />
+  <package id="Xceed.Wpf.Themes.Windows10" version="3.6.17613.09190" targetFramework="net452" />
+  <package id="Xceed.Wpf.Toolkit" version="3.6.17613.09190" targetFramework="net452" />
+  <package id="Xceed.Wpf.Toolkit.Themes.Metro" version="3.6.17613.09190" targetFramework="net452" />
+  <package id="Xceed.Wpf.Toolkit.Themes.Office2007" version="3.6.17613.09190" targetFramework="net452" />
+  <package id="Xceed.Wpf.Toolkit.Themes.Windows10" version="3.6.17613.09190" targetFramework="net452" />
 </packages>
