--- a/VideoGameLauncher/packages.config
+++ b/VideoGameLauncher/packages.config
@@ -5,6 +5,7 @@
   <package id="MahApps.Metro" version="1.6.1" targetFramework="net452" />
   <package id="MahApps.Metro.IconPacks.Material" version="2.2.0" targetFramework="net452" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Svg2Xaml" version="0.3.0.5" targetFramework="net452" />
   <package id="Xceed.Products.Wpf.Toolkit.Base.Themes" version="3.6.17613.09190" targetFramework="net452" />
   <package id="Xceed.Wpf.Themes" version="3.6.17613.09190" targetFramework="net452" />
