--- a/VideoGameLauncher/App.config
+++ b/VideoGameLauncher/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="ModDBContainer" connectionString="metadata=res://*/ModDB.csdl|res://*/ModDB.ssdl|res://*/ModDB.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;C:\Users\s00172994\Documents\Visual Studio 2015\Projects\FOOP2\ModDatabase.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
+    <add name="ModDBContainer" connectionString="metadata=res://*/ModDB.csdl|res://*/ModDB.ssdl|res://*/ModDB.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;C:\Users\David\Documents\Notes\FOOP2\ModDatabase.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
