--- a/VideoGameLauncher/VideoGameLauncher.csproj
+++ b/VideoGameLauncher/VideoGameLauncher.csproj
@@ -257,6 +257,9 @@
       <LastGenOutput>ModDB.cs</LastGenOutput>
       <DependentUpon>ModDB.edmx</DependentUpon>
     </Content>
+    <Content Include="Game\ᗢ.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
